<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>10</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jboss.beach.priv</groupId>
    <artifactId>jboss-beach-priv</artifactId>
    <version>0.2.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>JBoss Beach Privileged</name>

    <description>
        Do stuff in a privileged blocks.
    </description>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Dmaven.repo.local=${settings.localRepository} -Djava.security.manager -Djava.security.debug=access,failure -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--
        <dependency>
           <groupId>org.mockito</groupId>
           <artifactId>mockito-core</artifactId>
           <version>1.8.4</version>
           <scope>test</scope>
        </dependency>
        -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
    </dependencies>

    <modules>
        <module>interceptor</module>
        <module>runner</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/beachhouse/jboss-beach-priv-runner.git</connection>
        <developerConnection>scm:git:git@github.com:beachhouse/jboss-beach-priv-runner.git</developerConnection>
        <url>https://github.com/beachhouse/jboss-beach-priv-runner</url>
      <tag>HEAD</tag>
  </scm>
</project>
